--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
         <div class="info-group">
           <div class="label">Wind</div>
-          <div><span data-current-wind>11</span><span class="value-sub-info">mph</span>
+          <div><span data-current-wind>11</span><span class="value-sub-info">mph</span></div>
         </div>
         <div class="info-group">
           <div class="label">Low</div>
