--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" type="text/css" />
   </head>
-  <body>
+  <body class="blurred">
     <header class="header">
       <div class="header-left">
-        <img class="weather-icon large" src="public/icons/sun.svg" data-current-icon />
+        <img class="weather-icon large" src="icons/sun.svg" data-current-icon />
         <div class="header-current-temp">
-          <span data-current-temp>31</span>&deg;
+          <span data-current-temp></span>&deg;
         </div>
       </div>
       <div class="header-right">
         <div class="info-group">
           <div class="label">High</div>
-          <div><span data-current-high>32</span>&deg;</div>
+          <div><span data-current-high></span>&deg;</div>
         </div>
         <div class="info-group">
           <div class="label">FL High</div>
@@ -44,37 +44,37 @@
 
     <section class="day-section" data-day-section >
     <div class="day-card">
-      <img src="public/icons/cloud.svg" class="weather-icon">
+      <img src="icons/cloud.svg" class="weather-icon">
       <div class="day-card-day">Monday</div>
       <div>32&deg;</div>
     </div>
     <div class="day-card">
-      <img src="public/icons/cloud.svg" class="weather-icon">
+      <img src="icons/cloud.svg" class="weather-icon">
       <div class="day-card-day">Tuesday</div>
       <div>32&deg;</div>
     </div>
     <div class="day-card">
-      <img src="public/icons/cloud.svg" class="weather-icon">
+      <img src="icons/cloud.svg" class="weather-icon">
       <div class="day-card-day">Wednesday</div>
       <div>32&deg;</div>
     </div>
     <div class="day-card">
-      <img src="public/icons/cloud.svg" class="weather-icon">
+      <img src="icons/cloud.svg" class="weather-icon">
       <div class="day-card-day">Thursday</div>
       <div>32&deg;</div>
     </div>
     <div class="day-card">
-      <img src="public/icons/cloud.svg" class="weather-icon">
+      <img src="icons/cloud.svg" class="weather-icon">
       <div class="day-card-day">Friday</div>
       <div>32&deg;</div>
     </div>
     <div class="day-card">
-      <img src="public/icons/cloud.svg" class="weather-icon">
+      <img src="icons/cloud.svg" class="weather-icon">
       <div class="day-card-day">Saturday</div>
       <div>32&deg;</div>
     </div>
     <div class="day-card">
-      <img src="public/icons/cloud.svg" class="weather-icon">
+      <img src="icons/cloud.svg" class="weather-icon">
       <div class="day-card-day">Sunday</div>
       <div>32&deg;</div>
     </div>
@@ -90,7 +90,7 @@
         </div>
       </td>
       <td>
-        <img src="public/icons/cloud.svg" class="weather-icon">
+        <img src="/icons/cloud.svg" class="weather-icon">
       </td>
       <td>
         <div class="info-group">
@@ -125,7 +125,7 @@
         </div>
       </td>
       <td>
-        <img src="public/icons/cloud.svg" class="weather-icon">
+        <img src="icons/cloud.svg" class="weather-icon">
       </td>
       <td>
         <div class="info-group">
@@ -160,7 +160,7 @@
         </div>
       </td>
       <td>
-        <img src="public/icons/cloud.svg" class="weather-icon">
+        <img src="icons/cloud.svg" class="weather-icon">
       </td>
       <td>
         <div class="info-group">
@@ -195,7 +195,7 @@
         </div>
       </td>
       <td>
-        <img src="public/icons/cloud.svg" class="weather-icon">
+        <img src="icons/cloud.svg" class="weather-icon">
       </td>
       <td>
         <div class="info-group">
@@ -230,7 +230,7 @@
         </div>
       </td>
       <td>
-        <img src="public/icons/cloud.svg" class="weather-icon">
+        <img src="icons/cloud.svg" class="weather-icon">
       </td>
       <td>
         <div class="info-group">
@@ -265,7 +265,7 @@
         </div>
       </td>
       <td>
-        <img src="public/icons/cloud.svg" class="weather-icon">
+        <img src="icons/cloud.svg" class="weather-icon">
       </td>
       <td>
         <div class="info-group">
@@ -300,7 +300,7 @@
         </div>
       </td>
       <td>
-        <img src="public/icons/cloud.svg" class="weather-icon">
+        <img src="/icons/cloud.svg" class="weather-icon">
       </td>
       <td>
         <div class="info-group">
@@ -335,7 +335,7 @@
         </div>
       </td>
       <td>
-        <img src="public/icons/cloud.svg" class="weather-icon">
+        <img src="icons/cloud.svg" class="weather-icon">
       </td>
       <td>
         <div class="info-group">
