--- a/index.html
+++ b/index.html
@@ -300,7 +300,42 @@
         </div>
       </td>
       <td>
-        <img src="public/icons/cloud.svg" class="weather-icon">
+        <img src="/icons/cloud.svg" class="weather-icon">
+      </td>
+      <td>
+        <div class="info-group">
+          <div class="label">Temp</div>
+          <div>31&deg;</div>
+        </div>
+      </td>
+      <td>
+        <div class="info-group">
+          <div class="label">FL Temp</div>
+          <div>25&deg;</div>
+        </div>
+      </td>
+      <td>
+        <div class="info-group">
+          <div class="label">Wind</div>
+          <div><span data-wind></span><span class="value-sub-info">mph</span></div>
+        </div>
+      </td>
+      <td>
+        <div class="info-group">
+          <div class="label">Precip</div>
+          <div>0<span class="value-sub-info">in</span></div>
+        </div>
+      </td>
+    </tr>
+    <tr class="hour-row">
+      <td>
+        <div class="info-group">
+          <div class="label">Thursday</div>
+          <div>3 PM</div>
+        </div>
+      </td>
+      <td>
+        <img src="/icons/cloud.svg" class="weather-icon">
       </td>
       <td>
         <div class="info-group">
@@ -335,7 +370,7 @@
         </div>
       </td>
       <td>
-        <img src="public/icons/cloud.svg" class="weather-icon">
+        <img src="/icons/cloud.svg" class="weather-icon">
       </td>
       <td>
         <div class="info-group">
@@ -370,7 +405,7 @@
         </div>
       </td>
       <td>
-        <img src="public/icons/cloud.svg" class="weather-icon">
+        <img src="/icons/cloud.svg" class="weather-icon">
       </td>
       <td>
         <div class="info-group">
@@ -405,42 +440,7 @@
         </div>
       </td>
       <td>
-        <img src="public/icons/cloud.svg" class="weather-icon">
-      </td>
-      <td>
-        <div class="info-group">
-          <div class="label">Temp</div>
-          <div>31&deg;</div>
-        </div>
-      </td>
-      <td>
-        <div class="info-group">
-          <div class="label">FL Temp</div>
-          <div>25&deg;</div>
-        </div>
-      </td>
-      <td>
-        <div class="info-group">
-          <div class="label">Wind</div>
-          <div>6<span class="value-sub-info">mph</span></div>
-        </div>
-      </td>
-      <td>
-        <div class="info-group">
-          <div class="label">Precip</div>
-          <div>0<span class="value-sub-info">in</span></div>
-        </div>
-      </td>
-    </tr>
-    <tr class="hour-row">
-      <td>
-        <div class="info-group">
-          <div class="label">Thursday</div>
-          <div>3 PM</div>
-        </div>
-      </td>
-      <td>
-        <img src="public/icons/cloud.svg" class="weather-icon">
+        <img src="/icons/cloud.svg" class="weather-icon">
       </td>
       <td>
         <div class="info-group">
